--- a/gb/17/7/25/n9462335.md
+++ b/gb/17/7/25/n9462335.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aopp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aopp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aopp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aopp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aopp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aopp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aopp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aopp286/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aopp286/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aopp286/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aopp286/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>每日健走30分钟，逆转脂肪肝！4要点必知</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/07/shutterstock_644131225-600x400.jpg" />
 <h6>健走是消除脂肪肝最简单好用的方法。(Shutterstock)
 </h6>
 <hr>
-<p><ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E8%84%82%E8%82%AA%E8%82%9D.md#1">脂肪肝</a>已成为现在最常见的肝病，也是肝癌的重要风险因素之一。脂肪肝通常没有明显症状，所以很多人都没有当回事。许多人抱怨自己“胖”，担忧的总是皮下脂肪，却忽略了更危险的肝脏脂肪的囤积。</p>
-<p>肥胖是<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E8%84%82%E8%82%AA%E8%82%9D.md#1">脂肪肝</a>的主因。当人体脂肪过多，就会造成肝脏代谢负担，处理不掉的脂肪囤积在肝脏内，累积到一定程度，就形成脂肪肝。此外，天生脂肪代谢障碍、营养过剩、糖尿病也可能导致脂肪肝。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%84%82%E8%82%AA%E8%82%9D.md#1">脂肪肝</a>已成为现在最常见的肝病，也是肝癌的重要风险因素之一。脂肪肝通常没有明显症状，所以很多人都没有当回事。许多人抱怨自己“胖”，担忧的总是皮下脂肪，却忽略了更危险的肝脏脂肪的囤积。</p>
+<p>肥胖是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%84%82%E8%82%AA%E8%82%9D.md#1">脂肪肝</a>的主因。当人体脂肪过多，就会造成肝脏代谢负担，处理不掉的脂肪囤积在肝脏内，累积到一定程度，就形成脂肪肝。此外，天生脂肪代谢障碍、营养过剩、糖尿病也可能导致脂肪肝。</p>
 <p>若脂肪肝越来越严重，就可能发展成肝纤维化、肝硬化，甚至导致肝癌。如今在美国，脂肪肝已成为肝癌发病的主要因素。若不想让肝脏走上一条“不归路”，就要及时控制肝脏脂肪。治疗脂肪肝并没有什么特效药，改变生活方式是最好的做法。</p>
-<h2><span style="color: #008000;"><b>每日<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E5%81%A5%E8%B5%B0.md#1">健走</a>，消除脂肪肝</b></span></h2>
-<p>消除脂肪肝，最简单好用的办法就是<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E5%81%A5%E8%B5%B0.md#1">健走</a>。健走可以促进新陈代谢和血液循环，增强心肺功能，消耗皮下脂肪和内脏脂肪。万步网创办人刘玉章每日健走万步，走了四个月就<ahref="https://github.com/aopp286/djy/blob/master/gb/tag/%E5%87%8F%E9%87%8D.md#1">减重</a>十多公斤，脂肪肝完全消失。</p>
+<h2><span style="color: #008000;"><b>每日<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%A5%E8%B5%B0.md#1">健走</a>，消除脂肪肝</b></span></h2>
+<p>消除脂肪肝，最简单好用的办法就是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%A5%E8%B5%B0.md#1">健走</a>。健走可以促进新陈代谢和血液循环，增强心肺功能，消耗皮下脂肪和内脏脂肪。万步网创办人刘玉章每日健走万步，走了四个月就<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%87%8F%E9%87%8D.md#1">减重</a>十多公斤，脂肪肝完全消失。</p>
 <p>怎样健走，消除脂肪肝最有效？德成医馆院长、中医师陈德成建议人们健走时注意以下要点：</p>
 <p><span style="color: #008000;">●?<b>什么时间走？</b></span></p>
 <p>从中医角度看，春夏时在上午运动比较好，秋冬时在晚上运动比较好。因为春夏时人体阳气振奋，而秋冬则以收藏为主，早上运动会消耗阳气，影响白天工作。</p>
@@ -42,51 +42,50 @@
 <p>健走贵在坚持，因为只有在肢体的脂肪消耗到一定程度之后，才会燃烧肝脏脂肪。倘若兴致来了走上一走，兴致过了便抛在脑后，就很难有成效。</p>
 <p>泰然健身公司的共有者、健身教练泽农（Zenon Dolnyckyj）说：“如果人们想活出质量，就应该把运动变成一种爱好，变成一种生活方式。这样你会主动找时间去做，就更容易坚持下去。”</p>
 <p>选一双舒适的鞋，几首节奏明快的音乐，一处空气清朗的公园，走出一道明亮的风景吧！</p>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/aopp286/djy/blob/master/gb/17/9/26/n9672384.md#1" target="_blank" rel="noopener noreferrer">肝癌预防全攻略！堵住通向肝癌的5条路</a></span></h2>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/aopp286/djy/blob/master/gb/17/6/20/n9287154.md#1" target="_blank" rel="noopener noreferrer">9个好习惯 让你的肝脏元气满满</a></span></h2>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/aopp286/djy/blob/master/gb/16/11/21/n8512442.md#1">糖尿病患运动不用怕 四个饮食策略顾血糖</a></span></h2>
-<p>责任编辑：洪英</p>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/17/9/26/n9672384.md#1" target="_blank" rel="noopener noreferrer">肝癌预防全攻略！堵住通向肝癌的5条路</a></span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/17/6/20/n9287154.md#1" target="_blank" rel="noopener noreferrer">9个好习惯 让你的肝脏元气满满</a></span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/21/n8512442.md#1">糖尿病患运动不用怕 四个饮食策略顾血糖</a></span></h2>
+<p>责任编辑：洪英?◇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/16/1/31/n4630183.md#1">运动后肌肉酸痛 轻松11招舒缓不适</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/16/10/19/n8410928.md#1">亚裔脂肪肝比例高 小心变肝硬化</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/16/11/21/n8512442.md#1">糖尿病患运动不用怕 四个饮食策略顾血糖</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/17/3/10/n8895040.md#1">中大：五个瘦子 一个患脂肪肝</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/17/4/17/n9047348.md#1">调节荷尔蒙、预防癌症 红花苜蓿的6种功效</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/17/7/18/n9422325.md#1">绝大部分肝癌可以预防！4种人防癌诀窍</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/3/25/n11974203.md#1">红枣加2物煮甜粥 春天喝清血管又养肝</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/12/14/n11722889.md#1">从身体2部位看出肝功能好坏 1招增强肝功能</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/8/19/n11464243.md#1">肝癌是绝症吗？中医师：养肝是每天要做的事</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/19/6/18/n11330913.md#1">3个习惯最伤肝 你中了吗？中医全方位养肝秘诀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/31/n4630183.md#1">运动后肌肉酸痛 轻松11招舒缓不适</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/19/n8410928.md#1">亚裔脂肪肝比例高 小心变肝硬化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/21/n8512442.md#1">糖尿病患运动不用怕 四个饮食策略顾血糖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/10/n8895040.md#1">中大：五个瘦子 一个患脂肪肝</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/17/n9047348.md#1">调节荷尔蒙、预防癌症 红花苜蓿的6种功效</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/7/18/n9422325.md#1">绝大部分肝癌可以预防！4种人防癌诀窍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/10/14/n13304767.md#1">疲劳、睡不饱有5大原因！中医消疲劳有方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/8/31/n13198954.md#1">枸杞补肾 还是天然眼药！名医教5种吃法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/6/8/n13007769.md#1">头发反映全身健康 中医5个妙方 养发又养生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/5/4/n12923822.md#1">【重播】逆转脂肪肝！保肝妙招大公开</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10069025.md#1" target="_blank">杨宁：八路军为何大量购买治花柳病的药品？</a></li><li><a href="https://github.com/aopp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/7/n11306932.md#1" target="_blank">共产暴政录：共产党主导的三区叛乱</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12030965.md#1">Hakkasan上海店突宣布永久停业 退出中国</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/16/n12034796.md#1">【拍案惊奇】北京开打反习势力？美媒获瞒报铁证</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12031706.md#1">华人男女大闹澳洲超市 为奶粉欲殴老人</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12031340.md#1">美国撤侨 武汉一家四口搭上末班机?</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12028697.md#1">木村拓哉拍戏从不带剧本 获菜菜绪等人证实</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12031185.md#1">《花木兰》票房仅874美元？迪士尼：尚未上映</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12032770.md#1">疫情下加拿大小狗替家人带回速食餐点</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12033483.md#1">赞歌手韦礼安英文好 黄子佼提谭德塞全场笑翻</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12030796.md#1">大陆影业停摆80多天 逾二千间影院注销</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12032435.md#1">不经意的照片 让菲律宾女孩从乞丐变网红</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/11/n12022064.md#1">归序《推背图》兑运卦象预言中共终局</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/11/n12021603.md#1">牛顿 莎士比亚 达芬奇 经历瘟疫时做了些什么</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/15/n12033701.md#1">没喝孟婆汤？ 这些古人记得前生</a></li>
-<li><a href="https://github.com/aopp286/djy/blob/master/gb/20/4/14/n12029655.md#1">英教师每天走8公里 为78名小学生送午餐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aopp286/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aopp286/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/25/n9462335.htm">每日健走30分钟，逆转脂肪肝！4要点必知</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/25/n9462335.htm">每日健走30分钟，逆转脂肪肝！4要点必知</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aopp286/djy/blob/master/gb/17/7/25/n9462335.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aopp286/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aopp286/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aopp286/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aopp286/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopp286/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/7/25/n9462335.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
